ui/cloudkit/css/main.css
/* ... */
.dbinstruction_submenubox {
	width:880px;
	height:auto;
	float:left;
	background:#FFF url(../images/db_gridrowbg.gif) repeat-x left bottom;
	margin:0;
	padding:0;
}

.dbinstruction_submenubox_content { 
	width:800px; 
	height:auto; 
	float:left; 
	margin:10px 0 0 10px; 
	display:inline; 
	padding:0 0 15px 0; 
	list-style:none;
}

.dbinstruction_submenubox_content li {
	width:600px; 
	height:auto; 
	float:left; 
	margin:15px 0 0 10px;  
	list-style:none; 
	font-size:15px; 
	background:url(../images/menu_icon.png) no-repeat top left; 
	padding:1px 0 0 35px; 
}

.dbinstruction_submenubox_content a { 
	color:#2c8bbc; 
	text-align:left; 
	font-size:15px; 
	font-weight:normal; 
	text-decoration:none;
}

.dbinstruction_submenubox_content a:link,.dbinstruction_submenubox_content a:visited { 
	text-decoration:none; 
}

.dbinstruction_submenubox_content a:hover { 
	text-decoration:underline; 
}


.dbinstruction_contentarea p {
	width:880px;
	height:auto;
	float:left;
	color:#333;
	font-size:12px;
	font-weight:normal;
	line-height:16px;
	margin:15px 0 0 0;
	padding:0;
}


.dbinstruction_contentarea h3 {
	width:880px;
	height:auto;
	float:left;
	color:#f19d00;
	font-size:18px;
	font-weight:normal;
	margin:30px 0 0 0;
	padding:0;
}

.dbinstruction_contentarea h4 {
	width:880px;
	height:auto;
	float:left;
	color:#666;
	font-size:13px;
	font-weight:bold;
	margin:20px 0 0 0;
	padding:0;
}

.db_downlaodbox {
	width:880px;
	height:78px;
	float:left;
	background:url(../images/instructiondownload_bg.gif) no-repeat top left;
	margin:10px 0 0 0;
	padding:0;
}

.db_downlaodbox p{
	width:400px;
	height:auto;
	float:left;
	color:#666;
	font-size:14px;
	font-weight:normal;
	text-align:left;
	margin:20px 0 0 30px;
	display:inline;
	padding:0;
}

.db_instructiondownlaodbutton {
	width:133px;
	height:21px;
	float:right;
	background:url(../images/download_button.png) no-repeat top left;
	margin:15px 50px 0 0;
	color:#FFF;
	font-size:13px;
	text-align:center;
	text-decoration:none;
	padding:6px 0 0 15px;
}

.db_instructiondownlaodbutton:hover {
	background:url(../images/download_button_hover.png) no-repeat top left;
	text-decoration:none;

}

.dbinstruction_bulletbox {
	width:880px;
	height:auto;
	float:left;
	color:#333;
	font-size:11px;
	font-weight:normal;
	list-style:none;
	margin:0;
	padding:0;
}

.dbinstruction_bulletbox_codebox {
	width:820px;
	height:auto;
	float:left;
	background:#f1f1f1;
	color:#333;
	font-size:11px;
	font-weight:normal;
	list-style:none;
	margin:7px 0 0 0;
	padding:5px 0 5px 10px;
}

.dbinstruction_bulletbox li{
	width:800px;
	height:auto;
	float:left;
	margin:0;
	padding:0;
	list-style:none;
	background:url(../images/orange_bullet.gif) no-repeat 0 4px;
	color:#333;
	font-size:12px;
	font-weight:normal;
	margin:10px 0 0 0;
	padding:0 0 5px 15px;
}


.overlay_black{
	display: block;
	position: absolute;
	top: 0%;
	left: 0%;
	width: 100%;
	min-height: 1000px;
	height: 100%;
	background-color: black;
	z-index:5;
	-moz-opacity: 0.4;
	opacity:.40;
	filter: alpha(opacity=40);
	overflow:hidden;
}

.overlay_dialogbox {
	width:485px;
	height:auto;
	float:left;
	position:absolute;
	background:#FFF;
	border:1px solid #666;
	margin:0;
	padding:0;
	z-index:10;
	top:25%;
	left:36%;
}

.overlay_dialogbox_top {
	width:525px;
	height:29px;
	float:left;
	background:url(../images/overlaybox_top.png) no-repeat top left;
	margin:0;
	padding:0;
	overflow:hidden;
}

.overlay_dialogbox_closeicon {
	width:33px;
	height:32px;
	float:right;
	background:url(../images/overlaybox_closeicon.png) no-repeat top left;
	margin:-2px 0 0 0;
	padding:0;
	text-decoration:none;
}


.overlay_dialogbox_closeicon:hover {
	background:url(../images/overlaybox_closeicon_hover.png) no-repeat top left;
}

.overlay_dialogbox_mid {
	width:525px;
	height:auto;
	float:left;
	background:url(../images/overlaybox_mid.png) repeat-y top left;
	margin:0;
	padding:0;
}

.overlay_dialogbox_contentarea {
	width:450px;
	height:auto;
	float:left;
	margin:15px 0 0 16px;
	display:inline;
	padding:0 0 15px 0;
}

.overlay_dialogbox_titlearea {
	width:450px;
	height:25px;
	float:left;
	background:url(../images/db_gridheaderbg.gif) repeat-x top left;
	border:1px solid #CCC;
	margin:0;
	padding:0;
}

.overlay_dialogbox_titlearea  h2{
	width:400px;
	height:auto;
	float:left;
	color:#FFF;
	font-size:14px;
	font-weight:normal;
	text-align:left;
	margin:5px 0 0 10px;
	display:inline;
	padding:0;
}

.overlay_dialogbox_content {
	width:450px;
	height:auto;
	float:left;
	margin:15px 0 0 0;
	padding:0;
}

.overlay_dialogbox_content p {
	width:450px;
	height:auto;
	float:left;
	margin:10px 0 0 0;
	color:#333;
	font-size:11px;
	font-weight:normal;
	padding:0;
}


.db_stats_gridbox {
	width:450px;
	height:auto;
	float:left;
	margin:0;
	padding:0;
	border:1px solid #CCC;
}

.db_stats_gridrow {
	width:450px;	
	height:auto;
	float:left;
	background:url(../images/stats_row.gif) repeat-x bottom left;
	margin:0;
	padding:0;
	border-bottom:1px solid #CCC;
}

.db_stats_gridcolumns {
	width:auto;
	height:auto;
	float:left;
	margin:0;
	padding:0;
}

.db_stats_gridcelltitles {
	width:auto;
	height:auto;
	float:left;
	font-size:11px;
	font-weight:normal;
	margin:8px 0 0 8px;
	display:inline;
	padding:0 0 8px 0;
}

.overlay_dialogbox_confirmationbox {
	width:450px;
	height:auto;
	float:left;
	border-top:1px solid #CCC;
	margin:20px 0 0 0;
	padding:0;
}

.overlay_dialogbox_confirmationbuttonbox {
	width:auto;
	height:aut;
	float:right;
	margin:8px 0 0 0;
	padding:0;
}

.overlay_dialogbox_confirmationbuttonbox a{
	width:auto;
	height:aut;
	float:left;
	color:#2c8bbc;
	font-size:12px;
	font-weight:normal;
	text-align:left;
	margin:8px 0 0 0;
	padding:0;
	text-decoration:none;
}

.overlay_dialogbox_confirmationbuttonbox a:link, .overlay_dialogbox_confirmationbuttonbox a:visited{
	text-decoration:none;
}

.overlay_dialogbox_confirmationbuttonbox a:hover{
	text-decoration:underline;
}
/* ... */

